--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Sourcemap examples</title>
-    <script src="app.min.js"></script>
+    <script src="app1.min.js"></script>
+    <script src="app2/app2.min.js"></script>
   </head>
   <body>
     Check console
