--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <script src="app2/app2.min.js"></script>
   </head>
   <body>
-    Check console
+    Open console (&#8997;&#8984;j)
   </body>
 </html>
